# Ketaba-OCR-LoRA

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: training_config.yaml
scripts/: ensemble.py  inference.py  train.py
src/: __init__.py
src/ensemble/: __init__.py  advanced_ensemble.py  run_ensemble.py  weight_configs.py
src/inference/: __init__.py  inference.py
src/training/: __init__.py  config.py  train.py
